# zo-dispatcher

./: .gitignore  README.md  pyproject.toml  start.sh
config/: config.example.json  providers.yaml
skill/: SKILL.md
skill/references/: cli.md  editing-and-debugging.md  scheduled-agents.md  transforms.md  webhook-agents.md
tests/: test_agents.py  test_channels.py  test_db.py  test_lifecycle.py  test_webhooks.py
zo_dispatcher/: agents.py  channels.py  cli.py  db.py  server.py  webhooks.py
